...
export interface CalendarEvent {
  className: string;
  startTime: Date;
  endTime: Date;
  daysOfWeek: string[];
  endDate: string;
  campus: "SGW" | "Loyola";
  buildingCode: string;
  floorLevel: number;
  roomNumber: string;
  fullLocationString: string;
}

...
