...
      { latitude: 45.496526, longitude: -73.579559 },
    ],
  },
  {
    name: "M",
    campusName: "SGW",
    displayName: "M Annex (M)",
    address: "2135 Mackay St, Montreal, Quebec H3G 2J2",
    coordinates: {
      latitude: 45.497355,
      longitude: -73.579748,
    },
    boundingBox: [
...
