appId: com.concordia.snortingcode
---
- stopApp
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Select a campus"
    timeout: 10000

- tapOn: "Loyola Campus"

#  Opens directions
- tapOn:
    point: "90%,84%"

- assertVisible: "M Annex (M)"

